图片压缩，文本默认展开

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
           <div class="postcard-box">!</div>
           <div class="postcard-box">!</div>
         </div>
-        <img src="image/微信图片_202309100855081.jpg" alt="明信片图片">
+        <img src="image/微信图片_20230918101455.jpg" alt="明信片图片">
       </div>
 
       <div class="divider"></div>
 
       <div class="postcard-right">
         <div class="avatar">
-          <img src="./image/微信图片_202309101151101.jpg" alt="Avatar">
+          <img src="./image/微信图片_20230918101455_1.jpg" alt="Avatar">
           <span class="name">宁 静</span>
         </div>
 
@@ -84,10 +84,10 @@
     }
 
     function defaultCollapse() {
-      const idArr = data.map(x => x.id)
-      idArr.forEach(x => {
-        toggleItem(x)
-      })
+      // const idArr = data.map(x => x.id)
+      // idArr.forEach(x => {
+      //   toggleItem(x)
+      // })
     }
 
     function fetchJsonFile() {
